# mmap-rs

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  rust.yml
examples/: areas.rs  map_anon.rs  map_nocommit.rs
src/: areas.rs  error.rs  lib.rs  mmap.rs
src/os_impl/: freebsd.rs  linux.rs  macos.rs  mod.rs  unix.rs  windows.rs
