[package]
name = "mmap-rs"
version = "0.3.0"
edition = "2018"
authors = ["Stephan van Schaik <stephan@synkhronix.com>"]
license = "MIT"
description = "A cross-platform and safe Rust API to create and manage memory mappings in the virtual address space of the calling process."
homepage = "https://codentium.com"
repository = "https://github.com/StephanvanSchaik/mmap-rs"

[target.'cfg(windows)'.build-dependencies]
windows = "0.21"

[dependencies]
bitflags = "1"
combine = "4"
thiserror = "1"

[target.'cfg(unix)'.dependencies]
nix = "0.23"

[target.'cfg(windows)'.dependencies]
windows = "0.21"
