[package]
name = "mmap-rs"
version = "0.3.0"
edition = "2018"
authors = ["Stephan van Schaik <stephan@synkhronix.com>"]
license = "MIT"
description = "A cross-platform and safe Rust API to create and manage memory mappings in the virtual address space of the calling process."
homepage = "https://codentium.com"
repository = "https://github.com/StephanvanSchaik/mmap-rs"

[dependencies]
bitflags = "1"
combine = "4"
libc = "0.2"
thiserror = "1"

[target.'cfg(unix)'.dependencies]
nix = "0.23"
sysctl = "0.4"

[target.'cfg(windows)'.dependencies]
widestring = "0.4"

[target.'cfg(windows)'.dependencies.windows]
version = "0.29"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
]

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"
